--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,64 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: grey;
+}
+.sorting-div{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+   
+}
+h1{
+    text-align: center;
+    color: white;
+}
+.sorting-type{
+    padding: 8px;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+}
+.input-div{
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+.input-div input{
+    outline: none;
+    padding: 8px;
+    border-radius: 3px;
+    border: none;
+}
+.bars-div{
+    display: flex;
+    gap: 25px;
+}
+.bars{
+    background-color: red;
+    width: 50px;
+    text-align: center;
+    padding-top: 5px;
+    color: white;
+    font-weight: 700;
+    
+}
+.main-bar-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+}
+.btn{
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: lightblue;
+    color: white;
+    font-weight: 700;
+}
